--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,11 +8,11 @@
         "rebar3",
         "shell",
         "--name",
-        "debug@localhost",
+        "tcp_server_passive@localhost",
         "--setcookie",
         "123456"
       ],
-      "projectnode": "debug@localhost",
+      "projectnode": "tcp_server_passive@localhost",
       "cookie": "123456",
       "timeout": 300,
       "cwd": "${workspaceRoot}"
